--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "express": "3.4.4",
     "jade": "*",
-    "mongodb": "*"
+    "mongodb": "*",
+    "passport": "*",
+    "passport-facebook": "*"
   },
   "engines": {
     "node": "0.10.x",
