Uniform callbacks and Twitter authentication

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "jade": "*",
     "mongodb": "*",
     "passport": "*",
-    "passport-facebook": "*"
+    "passport-facebook": "*",
+    "passport-twitter": "*"
   },
   "engines": {
     "node": "0.10.x",
