Now using async library for control flow

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "passport-facebook": "*",
     "passport-twitter": "*",
     "domain": "*",
-    "express-validator": "*"
+    "express-validator": "*",
+    "async", "*"
   },
   "engines": {
     "node": "0.10.x",
