Converted to using moongoose for ORM

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "passport-twitter": "*",
     "domain": "*",
     "express-validator": "*",
-    "async": "*"
+    "async": "*",
+    "connect-mongo": "*",
+    "mongoose": "*"
   },
   "engines": {
     "node": "0.10.x",
