--- a/public/js/bower.json
+++ b/public/js/bower.json
@@ -5,6 +5,7 @@
     "jquery": "*",
     "angular": "*",
     "modernizr": "*",
-    "angular-ui-router": "*"
+    "angular-ui-router": "*",
+    "angular-animate": "*"
   }
 }
